force-app/main/default/objects/ServiceContractCancel__c/ServiceContractCancel__c.object-meta.xml
<CustomObject>
    <label>サービス_解約</label>
    <nameField>
        <label>サービス契約名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>