force-app/main/default/objects/ServiceContractCancel__c/fields/AcceptMediationChangeManual__c.field-meta.xml
<CustomField>
    <fullName>AcceptMediationChangeManual__c</fullName>
    <label>受付斡旋入替マニュアル</label>
    <type>TextArea</type>
</CustomField>