force-app/main/default/objects/ServiceContractCancel__c/fields/AcceptNotesManual__c.field-meta.xml
<CustomField>
    <fullName>AcceptNotesManual__c</fullName>
    <label>受付注意事項マニュアル</label>
    <type>TextArea</type>
</CustomField>