force-app/main/default/objects/ServiceContractCancel__c/fields/AcceptRealEstateSearchNotes__c.field-meta.xml
<CustomField>
    <fullName>AcceptRealEstateSearchNotes__c</fullName>
    <label>受付物件情報検索注意事項</label>
    <type>TextArea</type>
</CustomField>