force-app/main/default/objects/ServiceContractCancel__c/fields/AKSapporoSupport__c.field-meta.xml
<CustomField>
    <fullName>AKSapporoSupport__c</fullName>
    <label>A+K札幌対応</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Area</valueSetName>
    </valueSet>
</CustomField>