force-app/main/default/objects/ServiceContractCancel__c/fields/ApplicationGuidanceByCompanyNotes__c.field-meta.xml
<CustomField>
    <fullName>ApplicationGuidanceByCompanyNotes__c</fullName>
    <label>申請案内用企業別注意事項</label>
    <type>TextArea</type>
</CustomField>