force-app/main/default/objects/ServiceContractCancel__c/fields/ApplicationGuidanceEmailRetireText__c.field-meta.xml
<CustomField>
    <fullName>ApplicationGuidanceEmailRetireText__c</fullName>
    <label>申請案内メール退職本文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>