force-app/main/default/objects/ServiceContractCancel__c/fields/ApplicationLinkControl__c.field-meta.xml
<CustomField>
    <fullName>ApplicationLinkControl__c</fullName>
    <label>wsr申待連携制御</label>
    <length>255</length>
    <type>Text</type>
</CustomField>