force-app/main/default/objects/ServiceContractCancel__c/fields/ApplicationNotesTermsChange__c.field-meta.xml
<CustomField>
    <fullName>ApplicationNotesTermsChange__c</fullName>
    <label>申請時注意事項_条件変更</label>
    <type>TextArea</type>
</CustomField>