force-app/main/default/objects/ServiceContractCancel__c/fields/ApplicationTeamDisasterRule__c.field-meta.xml
<CustomField>
    <fullName>ApplicationTeamDisasterRule__c</fullName>
    <label>申入れチーム災害時ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>