force-app/main/default/objects/ServiceContractCancel__c/fields/ApplicationUsePhone__c.field-meta.xml
<CustomField>
    <fullName>ApplicationUsePhone__c</fullName>
    <label>申入れ用TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>