force-app/main/default/objects/ServiceContractCancel__c/fields/ApprovalAfterContactOnHoldIs__c.field-meta.xml
<CustomField>
    <fullName>ApprovalAfterContactOnHoldIs__c</fullName>
    <label>承認後連絡保留フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>