force-app/main/default/objects/ServiceContractCancel__c/fields/AttachedDocumentTermsChange__c.field-meta.xml
<CustomField>
    <fullName>AttachedDocumentTermsChange__c</fullName>
    <label>添付書類名_条件変更</label>
    <length>255</length>
    <type>Text</type>
</CustomField>