force-app/main/default/objects/ServiceContractCancel__c/fields/AttachedFileFormRule__c.field-meta.xml
<CustomField>
    <fullName>AttachedFileFormRule__c</fullName>
    <label>添付ファイル形式ルール</label>
    <type>TextArea</type>
</CustomField>