force-app/main/default/objects/ServiceContractCancel__c/fields/AutoRenewalTreatment__c.field-meta.xml
<CustomField>
    <fullName>AutoRenewalTreatment__c</fullName>
    <label>自動更新の扱い</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>