force-app/main/default/objects/ServiceContractCancel__c/fields/BorrowerAntisocialImprint__c.field-meta.xml
<CustomField>
    <fullName>BorrowerAntisocialImprint__c</fullName>
    <label>借主反社押印</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>