force-app/main/default/objects/ServiceContractCancel__c/fields/ByCompanyAnnouncementManual__c.field-meta.xml
<CustomField>
    <fullName>ByCompanyAnnouncementManual__c</fullName>
    <label>企業別アナウンスマニュアル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>