force-app/main/default/objects/ServiceContractCancel__c/fields/CalculateChargePhone__c.field-meta.xml
<CustomField>
    <fullName>CalculateChargePhone__c</fullName>
    <label>精算担当TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>