force-app/main/default/objects/ServiceContractCancel__c/fields/CancelApplicationDecisionEmailRule__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationDecisionEmailRule__c</fullName>
    <label>メール送信ルール_申入_決裁用</label>
    <type>TextArea</type>
</CustomField>