force-app/main/default/objects/ServiceContractCancel__c/fields/CancelApplicationName__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationName__c</fullName>
    <label>解約申請書名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>