force-app/main/default/objects/ServiceContractCancel__c/fields/CancelApplicationRegistrationManual__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationRegistrationManual__c</fullName>
    <label>解約申入必須管理登録マニュアル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>