force-app/main/default/objects/ServiceContractCancel__c/fields/CancelApplicationUseTrader__c.field-meta.xml
<CustomField>
    <fullName>CancelApplicationUseTrader__c</fullName>
    <label>解約申入れ用_業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>