force-app/main/default/objects/ServiceContractCancel__c/fields/CancelAttachedDocument__c.field-meta.xml
<CustomField>
    <fullName>CancelAttachedDocument__c</fullName>
    <label>添付書類名_解約</label>
    <type>TextArea</type>
</CustomField>