force-app/main/default/objects/ServiceContractCancel__c/fields/CancelAvailableUnavailableDisplayUse__c.field-meta.xml
<CustomField>
    <fullName>CancelAvailableUnavailableDisplayUse__c</fullName>
    <label>解約可不可_表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>