force-app/main/default/objects/ServiceContractCancel__c/fields/CancelCalculateDecisionEmailRule__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateDecisionEmailRule__c</fullName>
    <label>メール送信ルール_解約精算_決裁用</label>
    <type>TextArea</type>
</CustomField>