force-app/main/default/objects/ServiceContractCancel__c/fields/CancelCalculateNote__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateNote__c</fullName>
    <label>解約精算注意事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>