force-app/main/default/objects/ServiceContractCancel__c/fields/CancelCalculateSelfPayNotice__c.field-meta.xml
<CustomField>
    <fullName>CancelCalculateSelfPayNotice__c</fullName>
    <label>解約精算個人負担通知文</label>
    <length>255</length>
    <type>Text</type>
</CustomField>