force-app/main/default/objects/ServiceContractCancel__c/fields/CancelCompanyIndicateMatter__c.field-meta.xml
<CustomField>
    <fullName>CancelCompanyIndicateMatter__c</fullName>
    <label>解約企業指摘事項</label>
    <length>255</length>
    <type>Text</type>
</CustomField>