force-app/main/default/objects/ServiceContractCancel__c/fields/CancelDecisionApplicationFormLayout__c.field-meta.xml
<CustomField>
    <fullName>CancelDecisionApplicationFormLayout__c</fullName>
    <label>解約精算決裁申請書レイアウト</label>
    <length>255</length>
    <type>Text</type>
</CustomField>