force-app/main/default/objects/ServiceContractCancel__c/fields/CancelDoneContractDocumentInternalForm__c.field-meta.xml
<CustomField>
    <fullName>CancelDoneContractDocumentInternalForm__c</fullName>
    <label>解約済契約書類社内帳票</label>
    <length>255</length>
    <type>Text</type>
</CustomField>