force-app/main/default/objects/ServiceContractCancel__c/fields/CancelDoneContractDocumentPerson__c.field-meta.xml
<CustomField>
    <fullName>CancelDoneContractDocumentPerson__c</fullName>
    <label>解約済契約書類社内帳票者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>