force-app/main/default/objects/ServiceContractCancel__c/fields/CancelExternalStorageRule__c.field-meta.xml
<CustomField>
    <fullName>CancelExternalStorageRule__c</fullName>
    <label>解約外部保管ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>