force-app/main/default/objects/ServiceContractCancel__c/fields/CancelGarageManualDisplayUse__c.field-meta.xml
<CustomField>
    <fullName>CancelGarageManualDisplayUse__c</fullName>
    <label>解約駐車場マニュアル_表示用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>