force-app/main/default/objects/ServiceContractCancel__c/fields/CancelImprintAgencyComment__c.field-meta.xml
<CustomField>
    <fullName>CancelImprintAgencyComment__c</fullName>
    <label>解約押印代行コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>