force-app/main/default/objects/ServiceContractCancel__c/fields/CancelMovingComment__c.field-meta.xml
<CustomField>
    <fullName>CancelMovingComment__c</fullName>
    <label>解約引越しコメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>