force-app/main/default/objects/ServiceContractCancel__c/fields/CancelNoteCompanyIs__c.field-meta.xml
<CustomField>
    <fullName>CancelNoteCompanyIs__c</fullName>
    <label>キャンセル時注意企業フラグ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>