force-app/main/default/objects/ServiceContractCancel__c/fields/CancelOnHoldCansellationTiming__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHoldCansellationTiming__c</fullName>
    <label>解約保留解除タイミング</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>物件決定確認</fullName>
            </value>
            <value>
                <fullName>新規決裁承認確認</fullName>
            </value>
            <value>
                <fullName>退去日確認後解約</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>