force-app/main/default/objects/ServiceContractCancel__c/fields/CancelOnHoldIs__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHoldIs__c</fullName>
    <label>解約保留フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>引越保留</fullName>
            </value>
            <value>
                <fullName>東北保留</fullName>
            </value>
            <value>
                <fullName>引越・東北保留</fullName>
            </value>
            <value>
                <fullName>一斉解約</fullName>
            </value>
            <value>
                <fullName>受託解約</fullName>
            </value>
            <value>
                <fullName>自家保有注意</fullName>
            </value>
            <value>
                <fullName>日生保留</fullName>
            </value>
            <value>
                <fullName>赤文字注意</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>