force-app/main/default/objects/ServiceContractCancel__c/fields/CancelOnHoldMandatoryReason__c.field-meta.xml
<CustomField>
    <fullName>CancelOnHoldMandatoryReason__c</fullName>
    <label>解約保留必須理由</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>転居</fullName>
            </value>
            <value>
                <fullName>テスト</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>