force-app/main/default/objects/ServiceContractCancel__c/fields/CancelOperationCheckSheetAccessHistory__c.field-meta.xml
<CustomField>
    <fullName>CancelOperationCheckSheetAccessHistory__c</fullName>
    <label>解約業務チェックシートアクセス履歴</label>
    <length>255</length>
    <type>Text</type>
</CustomField>