force-app/main/default/objects/ServiceContractCancel__c/fields/CancelRentRemittanceComment__c.field-meta.xml
<CustomField>
    <fullName>CancelRentRemittanceComment__c</fullName>
    <label>解約家賃送金コメント</label>
    <length>255</length>
    <type>Text</type>
</CustomField>