force-app/main/default/objects/ServiceContractCancel__c/fields/CancelSelfPayGuidanceEmailAlert__c.field-meta.xml
<CustomField>
    <fullName>CancelSelfPayGuidanceEmailAlert__c</fullName>
    <label>解約_個人負担案内メールアラート</label>
    <length>255</length>
    <type>Text</type>
</CustomField>