force-app/main/default/objects/ServiceContractCancel__c/fields/CancelStorageYear__c.field-meta.xml
<CustomField>
    <fullName>CancelStorageYear__c</fullName>
    <label>解約保管年数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>