force-app/main/default/objects/ServiceContractCancel__c/fields/CancelSupportContractReturnAdress__c.field-meta.xml
<CustomField>
    <fullName>CancelSupportContractReturnAdress__c</fullName>
    <label>解約サポート_契約書返却住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>