force-app/main/default/objects/ServiceContractCancel__c/fields/CancelSupportContractReturnCompanyName__c.field-meta.xml
<CustomField>
    <fullName>CancelSupportContractReturnCompanyName__c</fullName>
    <label>解約サポート_契約書返却会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>