force-app/main/default/objects/ServiceContractCancel__c/fields/CancelSupportContractReturnPostNum__c.field-meta.xml
<CustomField>
    <fullName>CancelSupportContractReturnPostNum__c</fullName>
    <label>解約サポート_契約書返却郵便番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>