force-app/main/default/objects/ServiceContractCancel__c/fields/CancelVCollectBankAccountContractorKana__c.field-meta.xml
<CustomField>
    <fullName>CancelVCollectBankAccountContractorKana__c</fullName>
    <label>解約V回収口座名義カナ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>