force-app/main/default/objects/ServiceContractCancel__c/fields/CancelVCollectBankAccountContractorKanji__c.field-meta.xml
<CustomField>
    <fullName>CancelVCollectBankAccountContractorKanji__c</fullName>
    <label>解約V回収口座名義漢字</label>
    <length>255</length>
    <type>Text</type>
</CustomField>