force-app/main/default/objects/ServiceContractCancel__c/fields/CancelVCollectBranchOfficeName__c.field-meta.xml
<CustomField>
    <fullName>CancelVCollectBranchOfficeName__c</fullName>
    <label>解約V回収支店名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>