force-app/main/default/objects/ServiceContractCancel__c/fields/ChangeAntisocialArticle__c.field-meta.xml
<CustomField>
    <fullName>ChangeAntisocialArticle__c</fullName>
    <label>反社条文対応_入替</label>
    <type>TextArea</type>
</CustomField>