force-app/main/default/objects/ServiceContractCancel__c/fields/ChangeCharges__c.field-meta.xml
<CustomField>
    <fullName>ChangeCharges__c</fullName>
    <label>入替手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>