force-app/main/default/objects/ServiceContractCancel__c/fields/ChangeLeaveDateStandard__c.field-meta.xml
<CustomField>
    <fullName>ChangeLeaveDateStandard__c</fullName>
    <label>入替退去日基準</label>
    <length>255</length>
    <type>Text</type>
</CustomField>