force-app/main/default/objects/ServiceContractCancel__c/fields/ChangeLeaveEmployeeGreetingNotice__c.field-meta.xml
<CustomField>
    <fullName>ChangeLeaveEmployeeGreetingNotice__c</fullName>
    <label>入替退去時社員挨拶留意点</label>
    <type>TextArea</type>
</CustomField>