force-app/main/default/objects/ServiceContractCancel__c/fields/ChangeOtherEmailRule__c.field-meta.xml
<CustomField>
    <fullName>ChangeOtherEmailRule__c</fullName>
    <label>メール送信ルール_社有入替_その他</label>
    <type>TextArea</type>
</CustomField>