force-app/main/default/objects/ServiceContractCancel__c/fields/CheckListCollect__c.field-meta.xml
<CustomField>
    <fullName>CheckListCollect__c</fullName>
    <label>チェックリスト回収</label>
    <length>255</length>
    <type>Text</type>
</CustomField>