force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyAnnouncementManual__c.field-meta.xml
<CustomField>
    <fullName>CompanyAnnouncementManual__c</fullName>
    <label>企業別アナウンスマニュアル</label>
    <type>TextArea</type>
</CustomField>