force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyCharacteristic__c.field-meta.xml
<CustomField>
    <fullName>CompanyCharacteristic__c</fullName>
    <label>企業特性</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>