force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyControl__c.field-meta.xml
<CustomField>
    <fullName>CompanyControl__c</fullName>
    <label>wsr企業制御</label>
    <length>255</length>
    <type>Text</type>
</CustomField>