force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyCounterOtherEmailRule__c.field-meta.xml
<CustomField>
    <fullName>CompanyCounterOtherEmailRule__c</fullName>
    <label>メール送信ルール_企業窓口_その他</label>
    <type>TextArea</type>
</CustomField>