force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyDecisionSpecifyTime__c.field-meta.xml
<CustomField>
    <fullName>CompanyDecisionSpecifyTime__c</fullName>
    <label>企業決裁指定時間</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>