force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyRule1__c.field-meta.xml
<CustomField>
    <fullName>CompanyRule1__c</fullName>
    <label>企業ルール１</label>
    <type>TextArea</type>
</CustomField>