force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyRule5__c.field-meta.xml
<CustomField>
    <fullName>CompanyRule5__c</fullName>
    <label>企業ルール５</label>
    <type>TextArea</type>
</CustomField>