force-app/main/default/objects/ServiceContractCancel__c/fields/CompanyRule6__c.field-meta.xml
<CustomField>
    <fullName>CompanyRule6__c</fullName>
    <label>企業ルール６</label>
    <type>TextArea</type>
</CustomField>