force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeAdvanceRemittance__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeAdvanceRemittance__c</fullName>
    <label>名変_立替送金</label>
    <length>255</length>
    <type>Text</type>
</CustomField>