force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeApplicationFormNotArrived__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeApplicationFormNotArrived__c</fullName>
    <label>名変申請書未着での手続き確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>