force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeDepositSlideFeasibility__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeDepositSlideFeasibility__c</fullName>
    <label>名変_敷金スライド可否の確認</label>
    <length>255</length>
    <type>Text</type>
</CustomField>