force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeOriginalRecoveryCost__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeOriginalRecoveryCost__c</fullName>
    <label>名変_原状回復費用</label>
    <length>255</length>
    <type>Text</type>
</CustomField>