force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeRefuse__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeRefuse__c</fullName>
    <label>名変拒否</label>
    <length>255</length>
    <type>Text</type>
</CustomField>