force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeRentAdvanceRemittance__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeRentAdvanceRemittance__c</fullName>
    <label>名変_賃料立替送金</label>
    <length>255</length>
    <type>Text</type>
</CustomField>