force-app/main/default/objects/ServiceContractCancel__c/fields/ContractChangeRentRemittanceStop__c.field-meta.xml
<CustomField>
    <fullName>ContractChangeRentRemittanceStop__c</fullName>
    <label>名変_家賃送金停止</label>
    <length>255</length>
    <type>Text</type>
</CustomField>