force-app/main/default/objects/ServiceContractCancel__c/fields/ContractDecisionEmailRule__c.field-meta.xml
<CustomField>
    <fullName>ContractDecisionEmailRule__c</fullName>
    <label>メール送信ルール_契約管理_決裁用</label>
    <type>TextArea</type>
</CustomField>