force-app/main/default/objects/ServiceContractCancel__c/fields/ContractorChangeCharges__c.field-meta.xml
<CustomField>
    <fullName>ContractorChangeCharges__c</fullName>
    <label>名義変更手数料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>