force-app/main/default/objects/ServiceContractCancel__c/fields/ContractOtherEmailRule__c.field-meta.xml
<CustomField>
    <fullName>ContractOtherEmailRule__c</fullName>
    <label>メール送信ルール_契約管理_その他</label>
    <type>TextArea</type>
</CustomField>