force-app/main/default/objects/ServiceContractCancel__c/fields/ContractReturnMemo__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnMemo__c</fullName>
    <label>契約書返却メモ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>