force-app/main/default/objects/ServiceContractCancel__c/fields/ContractReturnMonth1__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnMonth1__c</fullName>
    <label>契約書返却月1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>