force-app/main/default/objects/ServiceContractCancel__c/fields/ContractReturnMonth2__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnMonth2__c</fullName>
    <label>契約書返却月2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>