force-app/main/default/objects/ServiceContractCancel__c/fields/ContractReturnMonth6__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnMonth6__c</fullName>
    <label>契約書返却月6</label>
    <length>255</length>
    <type>Text</type>
</CustomField>