force-app/main/default/objects/ServiceContractCancel__c/fields/ContractReturnRule__c.field-meta.xml
<CustomField>
    <fullName>ContractReturnRule__c</fullName>
    <label>契約書返却ルール</label>
    <length>255</length>
    <type>Text</type>
</CustomField>