force-app/main/default/objects/ServiceContractCancel__c/fields/ContractStorage__c.field-meta.xml
<CustomField>
    <fullName>ContractStorage__c</fullName>
    <label>契約書保管</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>