force-app/main/default/objects/ServiceContractCancel__c/fields/CorporateHousingCategoryPayMethod__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCategoryPayMethod__c</fullName>
    <label>社宅区分による負担</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>