force-app/main/default/objects/ServiceContractCancel__c/fields/CorporateHousingCategoryPayMethodNote__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingCategoryPayMethodNote__c</fullName>
    <label>社宅区分による負担備考</label>
    <type>TextArea</type>
</CustomField>