force-app/main/default/objects/ServiceContractCancel__c/fields/CorporateHousingDataDecisionEmailRule__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingDataDecisionEmailRule__c</fullName>
    <label>メール送信ルール_社宅データ_決裁用</label>
    <type>TextArea</type>
</CustomField>