force-app/main/default/objects/ServiceContractCancel__c/fields/CorporateHousingDataOtherEmailRule__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingDataOtherEmailRule__c</fullName>
    <label>メール送信ルール_社宅データ_その他</label>
    <type>TextArea</type>
</CustomField>