force-app/main/default/objects/ServiceContractCancel__c/fields/CSStaffName__c.field-meta.xml
<CustomField>
    <fullName>CSStaffName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS担当者名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ServiceContractContactRelation2</relationshipName>
    <type>Lookup</type>
</CustomField>