force-app/main/default/objects/ServiceContractCancel__c/fields/DataProcessRequestNotes__c.field-meta.xml
<CustomField>
    <fullName>DataProcessRequestNotes__c</fullName>
    <label>データ処理依頼書注意事項</label>
    <type>TextArea</type>
</CustomField>