force-app/main/default/objects/ServiceContractCancel__c/fields/DecisionApplicationCounter__c.field-meta.xml
<CustomField>
    <fullName>DecisionApplicationCounter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>決裁申請時窓口</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ServiceContractContactRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>