force-app/main/default/objects/ServiceContractCancel__c/fields/DecisionAuthority__c.field-meta.xml
<CustomField>
    <fullName>DecisionAuthority__c</fullName>
    <label>決裁権限</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有り</fullName>
            </value>
            <value>
                <fullName>無し</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>