force-app/main/default/objects/ServiceContractCancel__c/fields/DecisionAuthorityRule__c.field-meta.xml
<CustomField>
    <fullName>DecisionAuthorityRule__c</fullName>
    <label>決裁権限有ルール</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>