force-app/main/default/objects/ServiceContractCancel__c/fields/DepositCalculateApplicationRuleNote__c.field-meta.xml
<CustomField>
    <fullName>DepositCalculateApplicationRuleNote__c</fullName>
    <label>敷金精算_申請ルール備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>