force-app/main/default/objects/ServiceContractCancel__c/fields/DepositCalculateInvoiceNote__c.field-meta.xml
<CustomField>
    <fullName>DepositCalculateInvoiceNote__c</fullName>
    <label>敷金精算_送付書備考</label>
    <type>TextArea</type>
</CustomField>