force-app/main/default/objects/ServiceContractCancel__c/fields/DepositCalculateRule1__c.field-meta.xml
<CustomField>
    <fullName>DepositCalculateRule1__c</fullName>
    <label>敷金精算ルール１</label>
    <length>255</length>
    <type>Text</type>
</CustomField>