force-app/main/default/objects/ServiceContractCancel__c/fields/DepositCalculateRule2__c.field-meta.xml
<CustomField>
    <fullName>DepositCalculateRule2__c</fullName>
    <label>敷金精算ルール２</label>
    <length>255</length>
    <type>Text</type>
</CustomField>