force-app/main/default/objects/ServiceContractCancel__c/fields/DepositCalculateRule4__c.field-meta.xml
<CustomField>
    <fullName>DepositCalculateRule4__c</fullName>
    <label>敷金精算ルール４</label>
    <length>255</length>
    <type>Text</type>
</CustomField>