force-app/main/default/objects/ServiceContractCancel__c/fields/DepositCalculateSendDocumentNote__c.field-meta.xml
<CustomField>
    <fullName>DepositCalculateSendDocumentNote__c</fullName>
    <label>敷金精算_送付書備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>