force-app/main/default/objects/ServiceContractCancel__c/fields/DepositDepositCertificateNecessary__c.field-meta.xml
<CustomField>
    <fullName>DepositDepositCertificateNecessary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>敷金預かり証要</label>
    <type>Checkbox</type>
</CustomField>