force-app/main/default/objects/ServiceContractCancel__c/fields/DepositRefundDate__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundDate__c</fullName>
    <label>敷金返金日</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>月末返金</fullName>
            </value>
            <value>
                <fullName>1</fullName>
                <label>翌1日返金</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>25日返金</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>20日返金</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>15日返金</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>10日返金</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>