force-app/main/default/objects/ServiceContractCancel__c/fields/DepositRefundManual__c.field-meta.xml
<CustomField>
    <fullName>DepositRefundManual__c</fullName>
    <label>敷金返金マニュアル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>