force-app/main/default/objects/ServiceContractCancel__c/fields/DocumentStorage__c.field-meta.xml
<CustomField>
    <fullName>DocumentStorage__c</fullName>
    <label>書類保管</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>返却</fullName>
            </value>
            <value>
                <fullName>長期保管システム</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>