force-app/main/default/objects/ServiceContractCancel__c/fields/DummyText3__c.field-meta.xml
<CustomField>
    <fullName>DummyText3__c</fullName>
    <label>ダミーテキスト3</label>
    <type>TextArea</type>
</CustomField>