force-app/main/default/objects/ServiceContractCancel__c/fields/EmailSendRuleApplicationOther__c.field-meta.xml
<CustomField>
    <fullName>EmailSendRuleApplicationOther__c</fullName>
    <label>メール送信ルール_申入れ_その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>