force-app/main/default/objects/ServiceContractCancel__c/fields/EmailSendRuleCancelCalculateOther__c.field-meta.xml
<CustomField>
    <fullName>EmailSendRuleCancelCalculateOther__c</fullName>
    <label>メール送信ルール_解約精算_その他</label>
    <length>255</length>
    <type>Text</type>
</CustomField>