force-app/main/default/objects/ServiceContractCancel__c/fields/EmailSubjectRule__c.field-meta.xml
<CustomField>
    <fullName>EmailSubjectRule__c</fullName>
    <label>メール件名ルール</label>
    <type>TextArea</type>
</CustomField>