force-app/main/default/objects/ServiceContractCancel__c/fields/FileForSendingPassNote__c.field-meta.xml
<CustomField>
    <fullName>FileForSendingPassNote__c</fullName>
    <label>ファイル送付用パスワード備考</label>
    <type>TextArea</type>
</CustomField>