force-app/main/default/objects/ServiceContractCancel__c/fields/FileReceivingPass__c.field-meta.xml
<CustomField>
    <fullName>FileReceivingPass__c</fullName>
    <label>ファイル受信用パスワード</label>
    <length>255</length>
    <type>Text</type>
</CustomField>