force-app/main/default/objects/ServiceContractCancel__c/fields/FileSendRule__c.field-meta.xml
<CustomField>
    <fullName>FileSendRule__c</fullName>
    <label>ファイル送信ルール</label>
    <type>TextArea</type>
</CustomField>