force-app/main/default/objects/ServiceContractCancel__c/fields/IntentionNegligenceStandard1__c.field-meta.xml
<CustomField>
    <fullName>IntentionNegligenceStandard1__c</fullName>
    <label>故意過失基準1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>