force-app/main/default/objects/ServiceContractCancel__c/fields/IntentionNegligenceStandard2__c.field-meta.xml
<CustomField>
    <fullName>IntentionNegligenceStandard2__c</fullName>
    <label>故意過失基準2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>