force-app/main/default/objects/ServiceContractCancel__c/fields/IntentionNegligenceStandard3__c.field-meta.xml
<CustomField>
    <fullName>IntentionNegligenceStandard3__c</fullName>
    <label>故意過失基準3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>