force-app/main/default/objects/ServiceContractCancel__c/fields/IsA4Printing__c.field-meta.xml
<CustomField>
    <fullName>IsA4Printing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>A4印刷フラグ</label>
    <type>Checkbox</type>
</CustomField>