force-app/main/default/objects/ServiceContractCancel__c/fields/IsAntisocialAgreementStandard__c.field-meta.xml
<CustomField>
    <fullName>IsAntisocialAgreementStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>反社覚書標準フラグ</label>
    <type>Checkbox</type>
</CustomField>