force-app/main/default/objects/ServiceContractCancel__c/fields/IsApplicantList__c.field-meta.xml
<CustomField>
    <fullName>IsApplicantList__c</fullName>
    <label>適用者リスト有無</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PresenceAbsence</valueSetName>
    </valueSet>
</CustomField>