force-app/main/default/objects/ServiceContractCancel__c/fields/IsAutoSendLeaveGuidance__c.field-meta.xml
<CustomField>
    <fullName>IsAutoSendLeaveGuidance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>自動退去案内</label>
    <type>Checkbox</type>
</CustomField>