force-app/main/default/objects/ServiceContractCancel__c/fields/IsCancelCompany__c.field-meta.xml
<CustomField>
    <fullName>IsCancelCompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>解約企業</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ServiceContractAccountRelation1</relationshipName>
    <type>Lookup</type>
</CustomField>