force-app/main/default/objects/ServiceContractCancel__c/fields/IsCancelNoteCompany__c.field-meta.xml
<CustomField>
    <fullName>IsCancelNoteCompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>キャンセル時注意企業フラグ</label>
    <type>Checkbox</type>
</CustomField>