force-app/main/default/objects/ServiceContractCancel__c/fields/IsContactAfterDecisionApproval__c.field-meta.xml
<CustomField>
    <fullName>IsContactAfterDecisionApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>決裁承認後連絡</label>
    <type>Checkbox</type>
</CustomField>