force-app/main/default/objects/ServiceContractCancel__c/fields/IsContractorChange__c.field-meta.xml
<CustomField>
    <fullName>IsContractorChange__c</fullName>
    <label>名義変更の決裁権限</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>